--- a/stilus.css
+++ b/stilus.css
@@ -1,55 +1,78 @@
 body {
-   
+    background-color: greenyellow;
+}
+
 header {
     background-color: green;
     text-transform: uppercase;
-   
     border-radius: 10px;
-   
+    border: 5px solid black;
+    text-align: center;
 }
+
 a {
-    color:black;
-  
+    color: black;
     border: 4px solid black;
     border-radius: 8px;
     margin: 5px;
-    white-space: nowrap; /* chatgpt kód */
-    display: inline-block; /*chatgpt kód */
-      
+    white-space: nowrap;
+    display: inline-block;
+    text-decoration: none;
+    padding: 5px;
+}
+
+a:hover {
+    background-color: greenyellow;
 }
 
 nav {
     margin-bottom: 10px;
-
 }
+
 * {
     box-sizing: border-box;
 }
+
 img {
- 
     border: 5px solid black;
     border-radius: 10px;
+    width: 100%;
 }
+
 section {
     margin-top: 10px;
-    padding: 5px;
+    padding: 10px;
     border: 5px solid black;
     border-radius: 15px;
     background-color: green;
 }
+
 p {
     border: 5px solid black;
     border-radius: 10px;
     background-color: greenyellow;
 }
+
 article {
-    
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
     gap: 10px;
 }
+
+@media (max-width: 800px) {
+    article {
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
+
+@media (max-width: 500px) {
+    article {
+        grid-template-columns: 1fr;
+    }
+}
+
 #bekezdes_footer {
     background-color: green;
     border: 5px solid black;
     font-size: large;
 }
-
-
